# claudegolf

./: .gitignore  may8_dashboard.html  pyproject.toml  toptracer_3w_shots_may_13_2026.csv  toptracer_5i_shots_may_13_2026.csv  toptracer_7i_shots_may_13_2026.csv  toptracer_driver_shots_may_13_2026.csv  toptracer_pw_shots_may_13_2026.csv  trackman_dashboard.html  trackman_shots.csv  vercel.json
brogey/: analysis.py  benchmarks.py  cli.py  coach.py  db.py  ingest.py  render.py  seed.py  toptracer.py
dashboards/: index.html
supabase/: schema.sql
supabase/migrations/: 001_raw_measurement.sql  002_shared_flight_fields.sql
